--- a/Client/BlazorApp/Pages/ViewPerson.razor
+++ b/Client/BlazorApp/Pages/ViewPerson.razor
@@ -1,25 +1,25 @@
-﻿@page "/addperson"
-@page "/UpdatePerson/{Id:int}"
-@using MauiBlazorApp.Models;
-@using MauiBlazorApp.Services
+﻿@page "/viewperson/{Id:int}"
+@using CommonCode.Models
+@using CommonCode.Services
 @using System.ComponentModel.DataAnnotations
 @using System.Text.RegularExpressions
 @using CurrieTechnologies.Razor.SweetAlert2;
 
 @inject SweetAlertService Swal    // sweet alert call it Swal
-@inject IPersonService PersonService;
+@inject IPersonService PersonService
 @inject IJSRuntime JSRuntime
-@inject NavigationManager NavManager
-@inject NavigationManager NavigationManager
+@inject NavigationManager NavManager;
 
 
-<h3>AddUpdatePerson</h3>
+<script src="js/custom.js"></script>
+
+<h3>View Person</h3>
 
 <div class=" form">
     <div class="form-group d-flex">
         <div class=" form-group mx-2 ">
             <label for="Entry_Name">Nachname</label>
-            <input id="Entry_Name" @bind="Nachname" class="form-control" />
+            <label id="Entry_Name" @bind="Nachname" class="form-control" />
             @if (string.IsNullOrEmpty(Nachname) || !Regex.IsMatch(Nachname, ".{2,}"))
             {
                 <div class="text-danger"> Nachname is required!</div>
@@ -28,7 +28,7 @@
 
         <div class=" form-group mx-2 ">
             <label for="Entry_Vorname">Vorname</label>
-            <input id="Entry_Vorname" @bind="Vorname" class="form-control" />
+            <label id="Entry_Vorname" @bind="Vorname" class="form-control" />
             @if (string.IsNullOrEmpty(Vorname) || !Regex.IsMatch(Vorname, ".{2,}"))
             {
                 <div class="text-danger"> Vorname is required!</div>
@@ -37,11 +37,11 @@
 
         <div class=" form-group mx-2 ">
             <label for="Entry_Zwischenname">Zwischenname</label>
-            <input id="Entry_Zwischenname" @bind="Zwischenname" class="form-control" />
+            <label id="Entry_Zwischenname" @bind="Zwischenname" class="form-control" />
 
         </div>
     </div>
-
+@* 
     <div class="mt-3 form-group mx-2">
         <label>Gender</label>
         <div class="d-flex flex-row">
@@ -64,11 +64,11 @@
                 </label>
             </div>
         </div>
-    </div>
+    </div> *@
 
     <div class=" mt-2 form-group mx-2 ">
         <label for="Entry_Email">Email</label>
-        <input id="Entry_Email" @bind="Email" type="email" class="form-control" />
+        <label id="Entry_Email" @bind="Email" type="email" class="form-control" />
         @if (!IsValidEmail(Email))
         {
             <div class="text-danger">Please enter a valid email address.</div>
@@ -77,7 +77,7 @@
 
     <div class="mt-2 form-group mx-2">
         <label for="Entry_PhoneNumber">Telefonnummer</label>
-        <input id="Entry_PhoneNumber" @bind="Telefonnummer" class="form-control" />
+        <label id="Entry_PhoneNumber" @bind="Telefonnummer" class="form-control" />
         @if (string.IsNullOrEmpty(Telefonnummer) || !Regex.IsMatch(Telefonnummer, ".{8,}"))
         {
             <div class="text-danger"> Telefonnummer is required!</div>
@@ -88,7 +88,7 @@
     <div class=" mt-2 form-group d-flex">
         <div class="form-group mx-2">
             <label for="Entry_Strasse">Strasse</label>
-            <input id="Entry_Strasse" @bind="Strasse" class="form-control" />
+            <label id="Entry_Strasse" @bind="Strasse" class="form-control" />
             @if (string.IsNullOrEmpty(Strasse) || !Regex.IsMatch(Strasse, ".{2,}"))
             {
                 <div class="text-danger"> Strasse is required!</div>
@@ -96,7 +96,7 @@
         </div>
         <div class="col-md-4 mx-2">
             <label for="Entry_Hausnummer">Hausnummer</label>
-            <input id="Entry_Hausnummer" @bind="Hausnummer" class="form-control" />
+            <label id="Entry_Hausnummer" @bind="Hausnummer" class="form-control" />
             @if (string.IsNullOrEmpty(Hausnummer) || !Regex.IsMatch(Hausnummer, ".{1,}"))
             {
                 <div class="text-danger"> Hausnummer is required!</div>
@@ -104,7 +104,7 @@
         </div>
         <div class="col-md-4 mx-2">
             <label for="Entry_PLZ">PLZ</label>
-            <input id="Entry_PLZ" @bind="PLZ" class="form-control" />
+            <label id="Entry_PLZ" @bind="PLZ" class="form-control" />
             @if (string.IsNullOrEmpty(PLZ) || !Regex.IsMatch(PLZ, ".{5,}") || Regex.IsMatch(PLZ, ".{6,}"))
             {
                 <div class="text-danger"> PLZ is required!</div>
@@ -115,7 +115,7 @@
     <div class=" mt-2 form-group d-flex">
         <div class="col-md-4 mx-2">
             <label for="Entry_Stadt">Stadt</label>
-            <input id="Entry_Stadt" @bind="Stadt" class="form-control" />
+            <label id="Entry_Stadt" @bind="Stadt" class="form-control" />
             @if (string.IsNullOrEmpty(Stadt) || !Regex.IsMatch(Stadt, ".{2,}"))
             {
                 <div class="text-danger"> Stadt is required!</div>
@@ -123,7 +123,7 @@
         </div>
         <div class="form-group mx-2">
             <label for="Entry_Land">Land</label>
-            <input id="Entry_Land" @bind="Land" class="form-control" />
+            <label id="Entry_Land" @bind="Land" class="form-control" />
             @if (string.IsNullOrEmpty(Land) || !Regex.IsMatch(Land, ".{2,}"))
             {
                 <div class="text-danger"> Land is required!</div>
@@ -132,7 +132,7 @@
     </div>
 
 
-    <button @onclick="AddUpdatePersonDetails" class="mt-3 btn btn-primary mx-1">Save</button>
+    <button @onclick="AddUpdatePersonDetails" class="mt-3 btn btn-primary mx-1">Edit</button>
 
 </div>
 
@@ -178,6 +178,15 @@
 
 @code {
 
+    
+    public void DisplayUpdate(int personId)
+    {
+         NavManager.NavigateTo($"updatePerson/{personId}");
+       // NavManager.NavigateTo($"viewPerson/{personId}");
+
+    }
+
+
     [Parameter]
     public int Id { get; set; }
     private string Nachname;
@@ -219,7 +228,6 @@
         }
     }
 
-   
     private async void AddUpdatePersonDetails()
     {
         if (!IsValidInput(Nachname, false) || !IsValidInput(Vorname, false) ||
@@ -290,10 +298,6 @@
             if (response.Success)
             {
                 NavManager.NavigateTo("/"); // Redirect to the list page after update
-                //NavManager.NavigateTo("..");
-               
-                //NavigationManager.NavigateTo(NavigationManager.Uri.Substring(0, NavigationManager.Uri.LastIndexOf("/")));
-
 
                 await Swal.FireAsync(new SweetAlertOptions
                     {
@@ -350,8 +354,7 @@
 
                 this.StateHasChanged();
 
-                //NavManager.NavigateTo("/"); // Redirect to the list page after add
-                NavManager.NavigateTo("..");
+                NavManager.NavigateTo("/"); // Redirect to the list page after add
 
                 // await App.Current.MainPage.DisplayAlert("Contact Added", "Contact Added Successfully", "OK");
 
@@ -407,4 +410,3 @@
 
 
 }
-
