--- a/Client/MauiBlazorApp/Pages/Android.razor
+++ b/Client/MauiBlazorApp/Pages/Android.razor
@@ -28,14 +28,14 @@
 
 
 </head>
-       <h1>person list</h1> 
-            <h1> Android </h1>
+<h1>person list</h1>
+<h1> Android </h1>
 
 <div class="table-container">
     <div class="input-group mb-3">
-      
 
-        
+
+
         @* <iframe width="560" height="315" src="https://www.youtube.com/embed/m8e-FF8MsqU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         *@
 
@@ -123,8 +123,8 @@
     }
 
     .input-group {
-       /*  position: fixed;
-        top: 50px; /* Adjust as needed */
+        /*  position: fixed;
+            top: 50px; /* Adjust as needed */
         left: 50%;
         transform: translateX(-50%);
         z-index: auto; /* Ensure the search bar is above the table */
@@ -132,7 +132,8 @@
         padding: 1px;
         border-radius: 50px;
         border-radius: 0 0 0 0;
-        margin-bottom:1px; */
+        margin-bottom: 1px;
+        */
     }
 
     .btn-clear i {
@@ -196,12 +197,12 @@
         }
 
     .table-container {
-/*         max-height: calc(100vh - 120px); /* Subtract the height of the search bar and button container */
-/*         margin-top: 20px; /* Adjust as needed */
+        /*         max-height: calc(100vh - 120px); /* Subtract the height of the search bar and button container */
+        /*         margin-top: 20px; /* Adjust as needed */
 
         max-height: 600px; /* Adjust this value to set the maximum height of the container */
         overflow-y: auto;
-     }
+    }
 
 
 
@@ -319,46 +320,12 @@ else
     </div>
 }
 
-<div class="modal fade" id="deleteConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="deleteConfirmationModalLabel">Delete Confirmation</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                Are you sure you want to delete this person?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger" @onclick="ConfirmDelete">Delete</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-
 
 
 @code {
 
-
-
-    private void ClearSearchText()
-    {
-
-        searchText = "";
-    }
-
-
-
-
-    List<PersonModel> _PersonList;
-
     private string searchText = string.Empty;
+    List<PersonModel> _PersonList;
     private List<PersonModel> allPersons;
     private List<PersonModel> searchResults;
 
@@ -392,6 +359,12 @@ else
         {
             searchResults = null; // Set it to null when search text is empty
         }
+    }
+
+    private void ClearSearchText()
+    {
+        searchText = "";
+        searchResults = null;
     }
 
     private async void BtnSearch_Clicked()
@@ -461,11 +434,11 @@ else
 
         {
 
-               DisplayDeleteConfirmation(personDetail.Id);
+            DisplayDeleteConfirmation(personDetail.Id);
 
 
-           
-            
+
+
         }
     }
 
@@ -475,6 +448,7 @@ else
     {
         await OnConfirmation.InvokeAsync(true);
     }
+
 }
 
 
